# airticle-chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/airticle-chatbot/: main.py  my_file_2.py
src/airticle-chatbot/my_dir/: my_file.py
tests/: test_main.py  test_my_file_2.py
tests/my_dir/: test_my_file.py
